--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sainabs/QA-Week-6.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
